fix white space pre code

--- a/src/assets/github-markdown-dark.css
+++ b/src/assets/github-markdown-dark.css
@@ -798,7 +798,7 @@
   background-color: transparent;
   border: 0;
   word-break: break-word;
-  white-space: pre;
+  white-space: inherit;
   overflow-wrap: break-word;
   -ms-word-break: break-word;
   word-break: break-word;
